--- a/www/css/style.css
+++ b/www/css/style.css
@@ -6,10 +6,10 @@ body{
 	margin:0;
 	padding:0;
 	}
-#header{
+header{
 	margin:0 auto;
 	}
-#nav {
+nav {
  background: #292929;
  background: -moz-linear-gradient(top, black, #3c3c3c 1px, #292929 25px);
  background: -webkit-gradient(linear, left top, left 25, from(black), color-stop(4%, #3c3c3c), to(#292929));
@@ -21,16 +21,16 @@ body{
  width: 100%;
 }
 
-#nav li a, #nav li {
+nav li a, nav li {
  float: left;
 }
 
-#nav li {
+nav li {
  list-style: none;
  position: relative;
 }
 
-#nav li a {
+nav li a {
  padding: 0.6em 0.6em;
  text-decoration: none;
  color: white;
@@ -43,7 +43,7 @@ body{
  border-top: 1px solid #545454;
 }
 
-#nav li a:hover {
+nav li a:hover {
  background: #2a0d65;
  background: -moz-linear-gradient(top, #11032e, #2a0d65);
  background: -webkit-gradient(linear, left top, left bottom, from(#11032e), to(#2a0d65));
@@ -60,7 +60,7 @@ body{
 	bottom: 0;
 }
 
-#nav li ul {
+nav li ul {
  display: none;
  position: absolute;
  left: 0;
@@ -68,36 +68,36 @@ body{
  padding: 0; margin: 0;
 }
 
-#nav li:hover > ul {
+nav li:hover > ul {
  display: block;
 }
 
-#nav li ul li, #nav li ul li a {
+nav li ul li, nav li ul li a {
  float: none;
 }
 
-#nav li ul li {
+nav li ul li {
  _display: inline; /* for IE6 */
 }
 
-#nav li ul li a {
+nav li ul li a {
  width: auto;
  display: block;
 }
 
 /* SUBSUB Menu */
 
-#nav li ul li ul {
+nav li ul li ul {
  display: none;
 }
 
-#nav li ul li:hover ul {
+nav li ul li:hover ul {
  left: 100%;
  top: 0;
 }
 
 
-#nav li ul 	
+nav li ul 	
 	
 	
 .logo{
@@ -181,7 +181,7 @@ p a:hover{
     text-decoration:none;
 	padding:5px;
 	}
-.nav2{
+footer{
 	font-size:14px; 
     background:#2d2d2d; 
     -moz-border-top-left-radius:6px;
@@ -192,19 +192,19 @@ p a:hover{
     border-top-right-radius:6px;
     margin:0 5px;
 	}
-.nav2 p{
+footer p{
 	text-align:center;
 	color:#f2f2f2;
 	margin:0 5px;
 	padding:5px 0;
 	}
-.nav2 p a{
+footer p a{
 	display:inline-block;
 	color:#88aa00;
 	padding:5px;
 	text-decoration:none;
 	}
-.nav2 p a:hover{
+footer p a:hover{
 	color:#565656;
 	}
 
